refactor: Convert frontend to Vite for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -4,33 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InkSynth</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Manrope:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/react-image-crop/dist/ReactCrop.css" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              'sans': ['Manrope', 'sans-serif'],
-              'serif': ['DM Serif Display', 'serif'],
-            },
-            colors: {
-               accent: {
-                '500': '#3b82f6',
-                '600': '#2563eb',
-              }
-            }
-          },
-        },
-      }
-    </script>
+    <link rel="stylesheet" href="/src/index.css" />
     <style>
-      body {
-        font-family: 'Manrope', sans-serif;
-      }
       .ReactCrop__crop-selection {
         border: 2px dashed white;
       }
@@ -45,13 +24,15 @@
   <script type="importmap">
 {
   "imports": {
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react-image-crop": "https://esm.sh/react-image-crop@11.0.5",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10"
   }
 }
 </script>
@@ -59,7 +40,7 @@
 </head>
   <body class="bg-zinc-950">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
