feat: Finalize project for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Manrope:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/react-image-crop/dist/ReactCrop.css" />
-    <link rel="stylesheet" href="/src/index.css" />
     <style>
       .ReactCrop__crop-selection {
         border: 2px dashed white;
@@ -24,15 +23,14 @@
   <script type="importmap">
 {
   "imports": {
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.5",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-    "react-image-crop": "https://aistudiocdn.com/react-image-crop@^11.0.10"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.21"
   }
 }
 </script>
